<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.pro_solutions.attendanceapp.MainActivity"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_upText"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/who_you_are"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#9E9E9E"
        android:textStyle="bold|italic"

        />
    <LinearLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageButton

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/admin"
                android:scaleType="centerCrop"
                android:background="#00000000"
                android:id="@+id/adminbutton"
                android:padding="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adminbuttontext"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#FF5252"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageButton

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/professor"
                android:scaleType="centerCrop"
                android:background="#00000000"
                android:id="@+id/professorbutton"
                android:padding="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professorbuttontext"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#1DE9B6"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageButton

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/student"
                android:scaleType="centerCrop"
                android:background="#00000000"
                android:id="@+id/studentbutton"
                android:padding="5dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentbuttontext"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#FFC107"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:fontFamily="casual"
        android:background="@drawable/edittextstyle"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:id="@+id/Usernametext"
        android:textColorHint="#9E9E9E"
        android:hint="@string/usernameHint"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:maxLines="1"

        />

    <EditText
        android:fontFamily="casual"
        android:background="@drawable/edittextstyle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/Emailtext"
        android:hint="@string/emailHint"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:maxLines="1"
        />

    <EditText
        android:fontFamily="casual"
        android:background="@drawable/edittextstyle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/Passwordtext"
        android:hint="@string/passwordHint"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:maxLines="1"
        />

    <EditText
        android:fontFamily="casual"
        android:background="@drawable/edittextstyle"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/ConfirmPasswordtext"
        android:hint="@string/confirm_passwordHint"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#9E9E9E"
        android:maxLines="1"
        />
    <Button

        android:background="@drawable/buttonstyle"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/signupbutton"
        android:text="@string/signupButton"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textAppearance="?android:textAppearanceSmall"
        />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_accountText"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#9E9E9E"
            android:textStyle="bold|italic"
            android:id="@+id/loginhere"
        />



</LinearLayout>

